fixed nav vertical alignment

--- a/tumblr/less/app.less
+++ b/tumblr/less/app.less
@@ -246,6 +246,7 @@ body {
             display: block;
             height: 25px;
             line-height: 25px;
+            margin-top: -1px;
 
             img {
                 display: inline-block;
